--- a/now.json
+++ b/now.json
@@ -7,15 +7,20 @@
       "use": "now-sapper"
     }
   ],
-  "headers": [
+  "rewrites": [
+    { "source": "/about", "destination": "/about-our-company.html" },
+    { "source": "/resize/:width/:height", "destination": "/api/sharp" },
+    { "source": "/proxy/:match*", "destination": "https://example.com/:match*" },
     {
-      "source": "/client/(.*)",
-      "headers": [
+      "source": "/:path((?!uk/).*)",
+      "has": [
         {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "type": "header",
+          "key": "x-vercel-ip-country",
+          "value": "GB"
         }
-      ]
+      ],
+      "destination": "/uk/:path*"
     }
   ],
   "redirects": [
